[project]
name = "pyblisher"
version = "0.1.0"
description = "A publisher"
authors = [
    { name = "Lorenzo Carbonell <a.k.a. atareao>", email = "lorenzo.carbonell.cerezo@gmail.com" }
]
dependencies = [
    "fastapi",
    "gunicorn",
    "jinja2",
    "pillow",
    "plumbum",
    "python-dotenv",
    "requests",
    "requests-oauthlib",
    "retry2",
    "toml",
    "uvicorn",
    "yt-dlp",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    { include = "src" }
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"

